`Added voting time setting functionality and updated contract and views to reflect changes`

--- a/main/templates/voting.html
+++ b/main/templates/voting.html
@@ -80,6 +80,7 @@
         <div class="navigation">
             <a href="{% url 'votereg' %}">Voter Registration</a>
             <a href="{% url 'canreg' %}">Candidate Registration</a>
+            <a href="{% url 'man' %}">Admin functions</a>
         </div>
     </div>
 
